добавил ресурс для посмотра основной информации о тесте
