# app/Models/Topic.php
@@ -3,12 +3,12 @@
 namespace App\Models;
 
 /**
- * @OA\Schema(schema="QuestionTopic", description="Тема вопроса", properties={
+ * @OA\Schema(schema="Topic", description="Тема вопроса", properties={
  *      @OA\Property(property="id", type="string", description="ID темы вопроса"),
  *      @OA\Property(property="name", type="string", description="Название темы вопроса"),
  * })
  */
-class QuestionTopic extends BaseModel
+class Topic extends BaseModel
 {
     protected $fillable = [
         'name',
