# storage/api-docs/api-docs.json
@@ -1327,7 +1327,7 @@
                 },
                 "type": "object"
             },
-            "QuestionTopic": {
+            "Topic": {
                 "description": "Тема вопроса",
                 "properties": {
                     "id": {
@@ -1425,7 +1425,7 @@
                     "topics": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/QuestionTopic"
+                            "$ref": "#/components/schemas/Topic"
                         }
                     }
                 },
